--- a/onlineStoreF/src/app/orders/components/order-list/order-list.component.html
+++ b/onlineStoreF/src/app/orders/components/order-list/order-list.component.html
@@ -1,1 +1,43 @@
-<p>order-list works!</p>
+<h1>Shopping cart</h1>
+<div class="card my-5">
+  <div class="card-body">
+    <table class="table table-bordered table-striped">
+      <thead class="thead-dark">
+      <tr>
+        <th class="align-middle" scope="col">#</th>
+        <th class="align-middle" scope="col">Product name</th>
+        <th class="align-middle" scope="col">Quantity</th>
+        <th class="align-middle" scope="col">Price</th>
+        <th class="align-middle" scope="col">
+          <div class="row d-flex align-items-center"></div>
+        </th>
+      </tr>
+      </thead>
+      <tbody>
+      <tr *ngFor="let orderLine of order.orderLineDtoModels">
+        <td>{{(order.orderLineDtoModels.indexOf(orderLine)+1)}}</td>
+        <td>{{orderLine.productDto.name}}</td>
+        <td>{{orderLine.quantity}}</td>
+        <td>{{orderLine.price}}</td>
+
+        <td>
+          <div class="btn-group">
+            <button (click)="deleteOrderById(order.id)" class="btn btn-outline-primary mx-1"><i class="fa fa-pencil-square-o"  aria-hidden="true"></i></button>
+
+          </div>
+        </td>
+      </tr>
+
+      </tbody>
+
+    </table>
+
+    <div class="col-md-5">
+      <label>Total cost</label>
+      {{order.totalCost}}
+    </div>
+  </div>
+
+</div>
+
+
