--- a/onlineStoreF/src/app/orders/components/order-list/order-list.component.html
+++ b/onlineStoreF/src/app/orders/components/order-list/order-list.component.html
@@ -1,6 +1,8 @@
-<h1>Shopping cart</h1>
+<h3>Shopping cart</h3>
 <div class="card my-5">
   <div class="card-body">
+    <div class="row">
+    <div class="col-md-5">
     <table class="table table-bordered table-striped">
       <thead class="thead-dark">
       <tr>
@@ -17,12 +19,13 @@
       <tr *ngFor="let orderLine of order.orderLineDtoModels">
         <td>{{(order.orderLineDtoModels.indexOf(orderLine)+1)}}</td>
         <td>{{orderLine.productDto.name}}</td>
-        <td>{{orderLine.quantity}}</td>
-        <td>{{orderLine.price}}</td>
+        <td>{{orderLine.quantity}} <input type="number" value="1" min="1"> </td>
+        <td>{{orderLine.price}}<span> Lei</span></td>
 
         <td>
           <div class="btn-group">
-            <button (click)="deleteOrderById(order.id)" class="btn btn-outline-primary mx-1"><i class="fa fa-pencil-square-o"  aria-hidden="true"></i></button>
+            <button (click)="deleteOrderById(order.id)" type="button" class="btn btn-danger">Delete</button>
+
 
           </div>
         </td>
@@ -31,10 +34,14 @@
       </tbody>
 
     </table>
+    </div>
 
+      <div class="col-2 text-center"></div>
     <div class="col-md-5">
-      <label>Total cost</label>
+      <label>Total cost: </label>
       {{order.totalCost}}
+      <span> Lei</span>
+    </div>
     </div>
   </div>
 
