--- a/onlineStoreF/src/app/users/components/user-edit/user-edit.component.html
+++ b/onlineStoreF/src/app/users/components/user-edit/user-edit.component.html
@@ -32,6 +32,46 @@
         <div [hidden]="!logo.pristine" class="alert alert-danger">Logo is required</div>
       </div>
       <div class="form-group">
+        <label for="country">Country</label>
+        <input type="text" [(ngModel)]="user.addressDto.country"
+               class="form-control"
+               id="country"
+               name="country"
+               placeholder="Enter your country"
+               required #country="ngModel">
+        <div [hidden]="!country.pristine" class="alert alert-danger">Country is required</div>
+      </div>
+      <div class="form-group">
+        <label for="city">City</label>
+        <input type="text" [(ngModel)]="user.addressDto.city"
+               class="form-control"
+               id="city"
+               name="city"
+               placeholder="Enter your city"
+               required #city="ngModel">
+        <div [hidden]="!city.pristine" class="alert alert-danger">City is required</div>
+      </div>
+      <div class="form-group">
+        <label for="street">Street</label>
+        <input type="text" [(ngModel)]="user.addressDto.street"
+               class="form-control"
+               id="street"
+               name="street"
+               placeholder="Enter your street"
+               required #street="ngModel">
+        <div [hidden]="!street.pristine" class="alert alert-danger">Street is required</div>
+      </div>
+      <div class="form-group">
+        <label for="zipCode">ZipCode</label>
+        <input type="text" [(ngModel)]="user.addressDto.zipCode"
+               class="form-control"
+               id="zipCode"
+               name="zipCode"
+               placeholder="Enter your zipcode"
+               required #zipCode="ngModel">
+        <div [hidden]="!zipCode.pristine" class="alert alert-danger">ZipCode is required</div>
+      </div>
+      <div class="form-group">
         <label for="channel">Channel</label>
         <input type="text" [(ngModel)]="user.channel"
                class="form-control"
