--- a/onlineStoreF/src/app/users/components/user-list/user-list.component.html
+++ b/onlineStoreF/src/app/users/components/user-list/user-list.component.html
@@ -7,6 +7,10 @@
         <th class="align-middle" scope="col">Email</th>
         <th class="align-middle" scope="col">Password</th>
         <th class="align-middle" scope="col">Logo</th>
+        <th class="align-middle" scope="col">Country</th>
+        <th class="align-middle" scope="col">City</th>
+        <th class="align-middle" scope="col">Street</th>
+        <th class="align-middle" scope="col">Zipcode</th>
         <th class="align-middle" scope="col">Channel</th>
         <th class="align-middle" scope="col">
           <div class="row d-flex align-items-center">
@@ -26,6 +30,10 @@
         <td>{{ user.email }}</td>
         <td>{{ user.password }}</td>
         <td>{{ user.logo }}</td>
+        <td>{{ user.addressDto.country }}</td>
+        <td>{{ user.addressDto.city }}</td>
+        <td>{{ user.addressDto.street }}</td>
+        <td>{{ user.addressDto.zipCode }}</td>
         <td>{{ user.channel }}</td>
         <td>
           <div class="btn-group">
