--- a/onlineStoreF/src/app/orders/components/order-list/order-list.component.html
+++ b/onlineStoreF/src/app/orders/components/order-list/order-list.component.html
@@ -24,7 +24,7 @@
 
         <td>
           <div class="btn-group">
-            <button (click)="deleteOrderById(order.id)" type="button" class="btn btn-danger">Delete</button>
+            <button (click)="update(order.username, orderLine.id, orderLine.quantity )" type="button" class="btn btn-danger">Delete</button>
 
 
           </div>
