--- a/onlineStoreF/src/app/manufacturers/components/manufacturer-form/manufacturer-form.component.html
+++ b/onlineStoreF/src/app/manufacturers/components/manufacturer-form/manufacturer-form.component.html
@@ -1,1 +1,22 @@
-<p>manufacturer-form works!</p>
+<div class="card my-5">
+  <div class="card-body">
+    <form (ngSubmit)="onSubmit()" #manufacturerForm="ngForm">
+      <div class="form-group">
+        <label for="name">Name</label>
+        <input type="text" [(ngModel)]="manufacturer.name"
+               class="form-control"
+               id="name"
+               name="name"
+               placeholder="Enter manufacturer name"
+               required #name="ngModel">
+      </div>
+      <div [hidden]="!name.pristine" class="alert alert-danger">Manufacturer name is required</div>
+
+  <button (click)="goToManufacturerList()"
+          class="btn btn-secondary mx-1">Back
+  </button>
+  <button type="submit" [disabled]="!manufacturerForm.form.valid"
+          class="btn btn-info">Submit</button>
+  </form>
+</div>
+</div>
