--- a/onlineStoreF/src/app/orders/components/order-list/order-list.component.html
+++ b/onlineStoreF/src/app/orders/components/order-list/order-list.component.html
@@ -1,4 +1,5 @@
-<h3>Shopping cart</h3>
+<hr>
+<div class="align-middle"><h3 style="font-size:40px;color:green;">Shopping cart</h3> </div>
 <div class="card my-5">
   <div class="card-body">
     <div class="row">
@@ -10,6 +11,7 @@
             <th class="align-middle" scope="col">Product name</th>
             <th class="align-middle" scope="col">Quantity</th>
             <th class="align-middle" scope="col">Price</th>
+            <th class="align-middle" scope="col"></th>
 
               <div class="row d-flex align-items-center"></div>
 
@@ -34,12 +36,13 @@
 
         </table>
       </div>
+      <hr>
 
       <div class="col-2 text-center"></div>
       <div class="col-md-5">
-        <label>Total cost: </label>
-        {{order.totalCost}}
-        <span> Lei</span>
+        <label><b>Total cost:</b> </label>
+       <b>{{ order.totalCost}}</b>
+        <span><b>Lei</b> </span>
       </div>
     </div>
   </div>
