--- a/onlineStoreF/src/app/products/components/product-list/product-list.component.html
+++ b/onlineStoreF/src/app/products/components/product-list/product-list.component.html
@@ -21,6 +21,7 @@
         <td>{{ product.name }}</td>
         <td>{{ product.price }}</td>
         <td>{{ product.manufacturerDto.name }}</td>
+        <td>{{ product.categoryDto.name }}</td>
  <td>
  <div class=" btn-group">
       <button (click)="editProduct(product.id)" class="btn btn-outline-primary mx-1">Edit</button>
