--- a/onlineStoreF/src/app/orders/components/order-list/order-list.component.html
+++ b/onlineStoreF/src/app/orders/components/order-list/order-list.component.html
@@ -1,5 +1,6 @@
 <hr>
-<div class="align-middle"><h3 style="font-size:40px;color:green;">Shopping cart</h3> </div>
+
+<div class="align-middle"><h3   style="font-size:40px;color: blue;text-align: center;">Shopping cart</h3> </div>
 <div class="card my-5">
   <div class="card-body">
     <div class="row">
@@ -13,12 +14,12 @@
             <th class="align-middle" scope="col">Price</th>
             <th class="align-middle" scope="col"></th>
 
-              <div class="row d-flex align-items-center"></div>
+            <div class="row d-flex align-items-center"></div>
 
           </tr>
           </thead>
           <tbody>
-          <tr *ngFor="let orderLine of order.orderLineDtoModels">
+          <tr *ngFor="let orderLine of order.orderLineDtoModels | paginate : {itemsPerPage: numberOfItemsPerP, currentPage: p}">
             <td>{{(order.orderLineDtoModels.indexOf(orderLine)+1)}}</td>
             <td>{{orderLine.productDto.name}}</td>
             <td>{{orderLine.quantity}} <input type="number" value="1" min="1"  [(ngModel)]="orderLine.quantity"
@@ -27,7 +28,7 @@
 
             <td>
               <div class="btn-group">
-                <button (click)="update(order.username, orderLine.id, 0 )" type="button" class="btn btn-danger">Delete</button>
+                <a (click)="update(order.username, orderLine.id, 0 )" type="button" class="btn btn-warning">Remove</a>
               </div>
             </td>
           </tr>
@@ -35,14 +36,19 @@
           </tbody>
 
         </table>
+        <pagination-controls (pageChange)="p = $event"></pagination-controls>
       </div>
       <hr>
 
       <div class="col-2 text-center"></div>
-      <div class="col-md-5">
-        <label><b>Total cost:</b> </label>
-       <b>{{ order.totalCost}}</b>
-        <span><b>Lei</b> </span>
+      <div class="col-md-5" >
+        <div div class="card" style="background-color: powderblue; box-sizing: border-box;text-align: center;box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);padding: 5px;">
+          <label><b>Total cost:</b> <b> {{order.totalCost}} Lei</b></label>
+
+
+          <div class="btn-group" style="margin-left:350px"><a routerLink="/getProducts"  type="button" class="btn btn-info">Back to products</a></div>
+        </div>
+
       </div>
     </div>
   </div>
