--- a/onlineStoreF/src/app/orders/components/order-list/order-list.component.html
+++ b/onlineStoreF/src/app/orders/components/order-list/order-list.component.html
@@ -1,6 +1,8 @@
 <hr>
 
-<div class="align-middle"><h3   style="font-size:40px;color: blue;text-align: center;">Shopping cart</h3> </div>
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
+
+<div class="align-middle"><h4   style="font-size:40px;color: blue;text-align: center;" >Shopping cart<i class="fas fa-shopping-cart"></i></h4> </div>
 <div class="card my-5">
   <div class="card-body">
     <div class="row">
@@ -28,7 +30,7 @@
 
             <td>
               <div class="btn-group">
-                <a (click)="update(order.username, orderLine.id, 0 )" type="button" class="btn btn-warning">Remove</a>
+                <button (click)="update(order.username, orderLine.id, 0 )" type="button" class="btn btn-outline-info btn-sm">Remove</button>
               </div>
             </td>
           </tr>
@@ -46,7 +48,7 @@
           <label><b>Total cost:</b> <b> {{order.totalCost}} Lei</b></label>
 
 
-          <div class="btn-group" style="margin-left:350px"><a routerLink="/getProducts"  type="button" class="btn btn-info">Back to products</a></div>
+          <div class="btn-group" style="margin-left:350px"><a routerLink="/getProducts"  type="button" class="btn btn-info btn-sm">Back to products</a></div>
         </div>
 
       </div>
