mai trebuie cateva modificari

--- a/onlineStoreF/src/app/menu/content/content.component.html
+++ b/onlineStoreF/src/app/menu/content/content.component.html
@@ -1,5 +1,10 @@
-
+<a  xmlns="http://www.w3.org/1999/html">
 <img id="woman" src="assets/InkedphotoWoman_LI.jpg">
+  <div id="div">
+    <a id="shop" href="/getProducts">
+      <h1 >SHOP NOW</h1>
+    </a>
+  </div>
 <img id="man" src="assets/robert-pattinson-gq-photoshoot-2017-xv-1366x768.jpg">
-
+</a>
 
