--- a/onlineStoreF/src/app/menu/menu/menu.component.html
+++ b/onlineStoreF/src/app/menu/menu/menu.component.html
@@ -1,14 +1,13 @@
 <nav id="nav" class="navbar navbar-expand-sm navbar-light">
 
-  <button id="explore" type="button" class="btn btn-dark" >Explore</button>
+  <a id="home" href="http://localhost:4200"><i class="fa fa-fw fa-home"></i> Home</a>
+  <a id="Explore" href="/userview"><i class="fa fa-fw fa-globe-europe"></i> Explore</a>
 
-  <a id="a" class="navbar-brand text-white">
+  <a id="a" href="http://localhost:4200" class="navbar-brand text-white">
     <h1>Online Store</h1>
   </a>
-
-    <button id="button" type="button" class="btn btn-dark" >Log in</button>
-    <button id="button2" type="button" class="btn btn-dark" >Sign up</button>
-
-
+  <a id="help" href="https://www.bolf.ro/FAQ-cterms-rum-1375.html"><i class="fas fa-question"></i> Help</a>
+  <a id="contact" href="/contactForm"><i class="fa fa-fw fa-envelope"></i> Contact</a>
+  <a id="login" href="#"><i class="fa fa-fw fa-user"></i> Login</a>
 </nav>
 
