--- a/onlineStoreF/src/app/menu/content/content.component.css
+++ b/onlineStoreF/src/app/menu/content/content.component.css
@@ -5,3 +5,13 @@
 #woman{
   width: 100%;
 }
+#shop{
+  background-color: black;
+  color: white;
+  width: 50%;
+  text-align: center;
+}
+#div{
+  background-color: black;
+}
+
