--- a/onlineStoreF/src/app/menu/footer/footer.component.css
+++ b/onlineStoreF/src/app/menu/footer/footer.component.css
@@ -58,3 +58,24 @@
 #copy{
   color: white;
 }
+#facebook{
+  color: white;
+}
+#twitter{
+  color: white;
+}
+#google{
+  color: white;
+}
+#linkedin{
+  color: white;
+}
+#instagram{
+  color: white;
+}
+#icons{
+  margin: auto;
+  width: 50%;
+  padding: 10px;
+}
+
