--- a/onlineStoreF/src/app/menu/footer/footer.component.html
+++ b/onlineStoreF/src/app/menu/footer/footer.component.html
@@ -2,7 +2,7 @@
 <footer id="footer" class="page-footer font-small unique-color-dark">
 
 
-    <div class="container">
+    <div id="icons" class="container">
 
       <!-- Grid row-->
       <div class="row py-4 d-flex align-items-center">
@@ -15,24 +15,24 @@
         <div class="col-md-6 col-lg-7 text-center text-md-right">
 
           <!-- Facebook -->
-          <a class="fb-ic">
-            <i class="fab fa-facebook-f white-text mr-4"> </i>
+          <a href="https://www.facebook.com/" target="_blank" class="fb-ic">
+            <i id="facebook" class="fab fa-facebook-f white-text mr-4 mx-0"> </i>
           </a>
           <!-- Twitter -->
-          <a class="tw-ic">
-            <i class="fab fa-twitter white-text mr-4"> </i>
+          <a href="https://twitter.com/?lang=ro" target="_blank" class="tw-ic">
+            <i id="twitter" class="fab fa-twitter white-text mr-4"> </i>
           </a>
           <!-- Google +-->
-          <a class="gplus-ic">
-            <i class="fab fa-google-plus-g white-text mr-4"> </i>
+          <a href="https://www.google.ro/" target="_blank" class="gplus-ic">
+            <i id="google" class="fab fa-google-plus-g white-text mr-4"> </i>
           </a>
           <!--Linkedin -->
-          <a class="li-ic">
-            <i class="fab fa-linkedin-in white-text mr-4"> </i>
+          <a href="https://ro.linkedin.com/" target="_blank" class="li-ic">
+            <i id="linkedin" class="fab fa-linkedin-in white-text mr-4"> </i>
           </a>
           <!--Instagram-->
-          <a class="ins-ic">
-            <i class="fab fa-instagram white-text"> </i>
+          <a  href="https://www.instagram.com/?hl=ro" target="_blank" class="ins-ic">
+            <i id="instagram" class="fab fa-instagram white-text"> </i>
           </a>
           </div>
         </div>
@@ -85,7 +85,7 @@
       <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" color="white" style="width: 60px;">
 
         <p >
-          <a id="adidas" href="https://www.gucci.com/" target="_blank">Gucci</a>
+          <a id="adidas" href="https://www.gucci.com/ro/en_gb/ca/men-c-men" target="_blank">Gucci</a>
         </p>
         <p >
           <a id="nike" href="https://www.versace.com/" target="_blank">Versace</a>
