--- a/onlineStoreF/src/app/menu/menu/menu.component.css
+++ b/onlineStoreF/src/app/menu/menu/menu.component.css
@@ -1,21 +1,30 @@
 #a {
   margin: auto;
-  width: 27%;
+  width: 10%;
   padding: 10px;
+  font-family:cursive;
 }
 #nav{
   width: 100%;
   background-color: black;
 }
-#button{
-  background-color: black;
+#help{
   color: white;
+  margin: 30px;
 }
-#button2{
-  background-color: black;
+#home{
   color: white;
+  margin: 30px;
 }
-#explore{
-  background-color: black;
+#Explore{
   color: white;
+  margin: 30px;
+}
+#contact{
+  color: white;
+  margin: 25px;
+}
+#login{
+  color: white;
+  margin: 30px;
 }
