--- a/onlineStoreF/src/app/products/components/product-list/product-list.component.html
+++ b/onlineStoreF/src/app/products/components/product-list/product-list.component.html
@@ -1,8 +1,8 @@
-
 <div class="card my-5">
   <div class="card-body">
     <h1>Products</h1>
     <table class="table table-bordered table-striped">
+
       <thead class="thead-dark">
       <tr>
         <th class="align-middle" scope="col">#Id</th>
@@ -11,28 +11,57 @@
         <th class="align-middle" scope="col">Manufacturer</th>
         <th class="align-middle" scope="col">Category</th>
         <th>
+          <div class="col">
+            <div class="input-group">
+              <input type="text" [(ngModel)]="searchValue" class="form-control">
           <button (click)="addProduct()" class="btn btn-success">Add+
           </button>
+            </div>
+          </div>
         </th>
       </tr>
       </thead>
       <tbody>
-      <tr *ngFor="let product of products">
+      <tr *ngFor="let product of products | filter: searchValue | paginate : {itemsPerPage: numberOfItemsPerP, currentPage: p}">
       <td>{{ (products.indexOf(product)+1)}}</td>
         <td>{{ product.name }}</td>
         <td>{{ product.price }}</td>
         <td>{{ product.manufacturerDto.name }}</td>
         <td>{{ product.categoryDto.name }}</td>
  <td>
+
+
  <div class=" btn-group">
       <button (click)="editProduct(product.id)" class="btn btn-outline-primary mx-1">Edit</button>
-      <button (click)="deleteProduct(product.id)" class="btn btn-outline-danger">Delete</button>
+      <button (click)="open(content, product.id)" class="btn btn-outline-danger">Delete</button>
 
   </div>
+
   </td>
   </tr>
   </tbody>
   </table>
 
+    <pagination-controls (pageChange)="p = $event"></pagination-controls>
 </div>
 </div>
+
+<ng-template #content let-modal>
+  <div class="modal-header">
+    <h4 class="modal-title" id="modal-basic-title">Confirm dialog</h4>
+    <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+  <div class="modal-body">
+    <div class="row">
+      <div class="col-12 text-center">
+        Are you sure you want to delete this item?
+      </div>
+    </div>
+  </div>
+  <div class="modal-footer">
+    <button type="button" class="btn btn-danger" (click)="modal.close('Delete click')">Delete</button>
+  </div>
+</ng-template>
+
