--- a/onlineStoreF/src/app/orders/components/order-list/order-list.component.html
+++ b/onlineStoreF/src/app/orders/components/order-list/order-list.component.html
@@ -1,66 +1,80 @@
-<hr>
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css"
+      integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
 
-<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
+<div class="align-middle"><h4 style="font-size:40px;color: black;text-align: center;">Shopping cart<i
+  class="fas fa-shopping-cart"></i></h4></div>
 
-<div class="align-middle"><h4   style="font-size:40px;color: blue;text-align: center;" >Shopping cart<i class="fas fa-shopping-cart"></i></h4> </div>
-<div class="card my-5">
+<div class="card my-5" style="background-color: whitesmoke">
   <div class="card-body">
     <div class="row">
       <div class="col-md-5">
-        <div div class="card" style="background-color: powderblue; box-sizing: border-box;text-align: center;box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);padding: 5px;">
+        <div  class="card"
+             style="background-color: whitesmoke; box-sizing: border-box;text-align: center;box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);padding: 5px;">
 
-        <table class="table table-bordered table-striped">
-          <thead class="thead-dark">
-          <tr>
-            <th class="align-middle" scope="col">#</th>
-            <th class="align-middle" scope="col">Product name</th>
-            <th class="align-middle" scope="col">Quantity</th>
-            <th class="align-middle" scope="col">Price</th>
-            <th class="align-middle" scope="col"></th>
+          <table class="table table-bordered table-striped">
+            <thead class="thead-dark">
+            <tr>
+              <th class="align-middle" scope="col">#</th>
+              <th class="align-middle" scope="col">Product name</th>
+              <th class="align-middle" scope="col">Quantity</th>
+              <th class="align-middle" scope="col">Price</th>
+             <!--  <th class="align-middle" scope="col">Comments</th> --->
 
-            <div class="row d-flex align-items-center"></div>
+              <div class="row d-flex align-items-center"></div>
 
-          </tr>
-          </thead>
-          <tbody>
-          <tr *ngFor="let orderLine of order.orderLineDtoModels | paginate : {itemsPerPage: numberOfItemsPerP, currentPage: p}">
-
-
-
-            <td>{{(order.orderLineDtoModels.indexOf(orderLine)+1)}}</td>
+            </tr>
+            </thead>
+            <tbody >
+            <tr
+              *ngFor="let orderLine of order.orderLineDtoModels | paginate : {itemsPerPage: numberOfItemsPerP, currentPage: p}">
 
 
-            <td>{{orderLine.productDto.name}}</td>
-            <td>{{orderLine.quantity}} <input type="number" value="1" min="1"  [(ngModel)]="orderLine.quantity"
-                                              (change)="changeQuantity(orderLine)"> </td>
-            <td>{{orderLine.price}}<span> Lei</span></td>
+              <td ><div style="color: black">{{(order.orderLineDtoModels.indexOf(orderLine) + 1)}}</div></td>
 
-            <td>
-              <div class="btn-group">
-                <button (click)="update(order.username, orderLine.id, 0 )" type="button" class="btn btn-outline-dark btn-sm">Remove</button>
-              </div>
-            </td>
-          </tr>
 
-          </tbody>
+              <td><div style="color: black">{{orderLine.productDto.name}}</div></td>
+              <td><div style="color: black">{{orderLine.quantity}}
 
-        </table>
+
+
+                <input type="number" style="width: 50px;" value="1" min="0"
+                                                                               [(ngModel)]="orderLine.quantity"
+                       (change)="changeQuantity(orderLine)">Qty</div></td>
+              <td><div style="color: black">{{orderLine.price}}<span> RON</span></div></td>
+
+            <!--  <td>
+                <div class="btn-group">
+                  <label >Add Qty = 0 for deletion
+                  </label>
+                </div>
+              </td> -->
+            </tr>
+
+            </tbody>
+
+          </table>
         </div>
         <pagination-controls (pageChange)="p = $event"></pagination-controls>
       </div>
       <hr>
 
       <div class="col-2 text-center"></div>
-      <div class="col-md-5" >
-        <div div class="card" style="background-color: powderblue; box-sizing: border-box;text-align: center;box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);padding: 5px;">
-          <label><b>Total cost:</b> <b> {{order.totalCost}} Lei</b></label>
+
+      <div class="col-md-5">
+        <div class="card"
+             style="width: 480px; height: 105px; background-color: black; box-sizing: border-box;text-align: center;box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);padding: 5px;">
+          <div style="color: whitesmoke"> <label>Total cost: <b> {{order.totalCost}} RON</b></label>
+            <br>
+          <label>Number of items: <b>{{order.orderLineDtoModels.length}}</b></label>
+          </div>
+
+          <div class="btn-group" style="margin-left:350px">
+            <button (click)="placeOrder()" type="button" class="btn btn btn-light btn-sm">Place order</button>
+          </div>
 
 
-          <div class="btn-group" style="margin-left:350px"><a routerLink="/getProducts"  type="button" class="btn btn-info btn-sm">Back to products</a></div>
         </div>
-
       </div>
     </div>
   </div>
-
 </div>
