--- a/onlineStoreF/src/app/menu/menu/menu.component.html
+++ b/onlineStoreF/src/app/menu/menu/menu.component.html
@@ -8,6 +8,9 @@
   </a>
   <a id="help" href="https://www.bolf.ro/FAQ-cterms-rum-1375.html"><i class="fas fa-question"></i> Help</a>
   <a id="contact" href="/contactForm"><i class="fa fa-fw fa-envelope"></i> Contact</a>
-  <a id="login" href="#"><i class="fa fa-fw fa-user"></i> Login</a>
+  <div class="btn-group">
+  <a id="login" href="/login"><i class="fa fa-fw fa-user"></i> Login</a>
+  <a id="register" href="/addUser">Register</a>
+  </div>
 </nav>
 
