--- a/onlineStoreF/src/app/users/components/user-list/user-list.component.html
+++ b/onlineStoreF/src/app/users/components/user-list/user-list.component.html
@@ -5,13 +5,9 @@
       <tr>
         <th class="align-middle" scope="col">#</th>
         <th class="align-middle" scope="col">Email</th>
+        <th class="align-middle" scope="col">Username</th>
         <th class="align-middle" scope="col">Password</th>
-        <th class="align-middle" scope="col">Logo</th>
-        <th class="align-middle" scope="col">Country</th>
-        <th class="align-middle" scope="col">City</th>
-        <th class="align-middle" scope="col">Street</th>
-        <th class="align-middle" scope="col">Zipcode</th>
-        <th class="align-middle" scope="col">Channel</th>
+
         <th class="align-middle" scope="col">
           <div class="row d-flex align-items-center">
             <div class="col">
@@ -28,13 +24,9 @@
       <tr *ngFor="let user of users">
         <td>{{ user.id }}</td>
         <td>{{ user.email }}</td>
+        <td>{{ user.username }}</td>
         <td>{{ user.password }}</td>
-        <td>{{ user.logo }}</td>
-        <td>{{ user.addressDto.country }}</td>
-        <td>{{ user.addressDto.city }}</td>
-        <td>{{ user.addressDto.street }}</td>
-        <td>{{ user.addressDto.zipCode }}</td>
-        <td>{{ user.channel }}</td>
+
         <td>
           <div class="btn-group">
             <button (click)="editUser(user.id)" class="btn btn-primary mx-1">Edit</button>
