--- a/onlineStoreF/src/app/orders/components/order-list/order-list.component.html
+++ b/onlineStoreF/src/app/orders/components/order-list/order-list.component.html
@@ -12,7 +12,7 @@
              style="background-color: whitesmoke; box-sizing: border-box;text-align: center;box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);padding: 5px;">
 
           <table class="table table-bordered table-striped">
-            <thead class="thead-dark">
+            <thead >
             <tr>
 
               <th class="align-middle" scope="col">Product name</th>
@@ -70,7 +70,7 @@
           </div>
 
           <div class="btn-group" style="margin-left:350px">
-            <button (click)="placeOrder()" type="button" class="btn btn btn-light btn-sm">Place order</button>
+            <button (click)="emptyCart()" type="button" class="btn btn btn-light btn-sm">Empty cart</button>
           </div>
 
 
