--- a/onlineStoreF/src/app/orders/components/order-list/order-list.component.html
+++ b/onlineStoreF/src/app/orders/components/order-list/order-list.component.html
@@ -70,7 +70,7 @@
           </div>
 
           <div class="btn-group" style="margin-left:350px">
-            <button (click)="emptyCart()" type="button" class="btn btn btn-light btn-sm">Empty cart</button>
+            <button (click)="placeOrder()" type="button" class="btn btn btn-light btn-sm">Place order</button>
           </div>
 
 
