--- a/onlineStoreF/src/app/users/components/user-add/user-add.component.html
+++ b/onlineStoreF/src/app/users/components/user-add/user-add.component.html
@@ -14,7 +14,7 @@
 
       <div class="form-group">
         <label for="username">Username</label>
-        <input type="text" [(ngModel)]="user.password"
+        <input type="text" [(ngModel)]="user.username"
                class="form-control"
                id="username"
                name="username"
