--- a/onlineStoreF/src/app/menu/menu/menu.component.html
+++ b/onlineStoreF/src/app/menu/menu/menu.component.html
@@ -8,9 +8,20 @@
   </a>
   <a id="help" href="https://www.bolf.ro/FAQ-cterms-rum-1375.html"><i class="fas fa-question"></i> Help</a>
   <a id="contact" href="/contactForm"><i class="fa fa-fw fa-envelope"></i> Contact</a>
-  <div class="btn-group">
-  <a id="login" href="/login"><i class="fa fa-fw fa-user"></i> Login</a>
-  <a id="register" href="/addUser">Register</a>
+  <div *ngIf="!isLoggedIn" class="btn-group">
+    <a id="login" href="/login"><i class="fa fa-fw fa-user"></i> Login</a>
+    <a id="register" href="/addUser">Register</a>
   </div>
-</nav>
 
+  <ul *ngIf="isLoggedIn" class="navbar-nav ml-auto">
+    <li ngbDropdown class="nav-item dropdown">
+      <a ngbDropdownToggle class="nav-link text-white dropdown-toggle" id="navbarDropdownMenuLink"
+         data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="cursor: pointer;">
+        <i class="fa fa-user-circle"></i> {{currentUser.username}}
+      </a>
+      <div ngbDropdownMenu class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+        <a ngbDropdownItem class="dropdown-item" (click)="logOut()" style="cursor: pointer">Log Out</a>
+      </div>
+    </li>
+  </ul>
+</nav>
