--- a/onlineStoreF/src/app/orders/components/order-list/order-list.component.html
+++ b/onlineStoreF/src/app/orders/components/order-list/order-list.component.html
@@ -63,14 +63,25 @@
 
       <div class="col-md-5">
         <div class="card"
-             style="width: 480px; height: 105px; background-color: black; box-sizing: border-box;text-align: center;box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);padding: 5px;">
+             style="width: 480px; height: 140px; background-color: black; box-sizing: border-box;text-align: center;box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);padding: 5px;">
+
+          <div class="btn-group" style="margin-left:350px;">
+            <button (click)="goToProducts()" type="button" class="btn btn btn-light btn-sm ">Back</button>
+          </div>
+
           <div style="color: whitesmoke;font-family:cursive;"> <label>Total cost: <b> {{order.totalCost}} EUR</b></label>
             <br>
           <label>Number of items: <b>{{order.orderLineDtoModels.length}}</b></label>
           </div>
 
-          <div class="btn-group" style="margin-left:350px">
-            <button (click)="placeOrder(order.id)" type="button" class="btn btn btn-light btn-sm">Place order</button>
+
+        <!-- <div class="btn-group" style="margin-right:350px">
+            <button (click)="placeOrder(order.id)" type="button" class="btn btn btn-light btn-sm" style="margin-right:350px; margin-bottom: 500px">Place order</button>
+          </div> -->
+
+
+          <div class="btn-group" style="margin-left:350px;">
+            <button (click)="placeOrder(order.id)" type="button" class="btn btn btn-light btn-sm ">Place order</button>
           </div>
 
 
