--- a/onlineStoreF/src/app/menu/menu/menu.component.html
+++ b/onlineStoreF/src/app/menu/menu/menu.component.html
@@ -1,7 +1,7 @@
 <nav id="nav" class="navbar navbar-expand-sm navbar-light">
 
   <a id="home" href="http://localhost:4200"><i class="fa fa-fw fa-home"></i> Home</a>
-  <a id="Explore" href="/userview"><i class="fa fa-fw fa-globe-europe"></i> Explore</a>
+  <a id="Explore" href="/userview"><i class="fas fa-globe"></i> Explore</a>
 
   <a id="a" href="http://localhost:4200" class="navbar-brand text-white">
     <h1>Online Store</h1>
