--- a/onlineStoreF/src/app/app.component.html
+++ b/onlineStoreF/src/app/app.component.html
@@ -1,3 +1,8 @@
 <app-menu></app-menu>
+<div *ngIf="authService.isUserLoggedIn()">
 <router-outlet></router-outlet>
+</div>
+<div *ngIf="!authService.isUserLoggedIn()">
+  <app-login></app-login>
+</div>
 <app-footer></app-footer>
