--- a/onlineStoreF/src/app/menu/checkout-form/checkout-form.component.html
+++ b/onlineStoreF/src/app/menu/checkout-form/checkout-form.component.html
@@ -31,23 +31,24 @@
             <h3>Payment</h3>
             <label for="fname">Accepted Cards</label>
             <div class="icon-container">
-              <i class="fa fa-cc-visa" style="color:navy"></i>
-              <i class="fa fa-cc-amex" style="color:blue"></i>
-              <i class="fa fa-cc-mastercard" style="color:red"></i>
+              <i class="fa fa-cc-visa mx-2" style="color:navy"></i>
+              <i class="fa fa-cc-amex mx-2" style="color:blue"></i>
+              <i class="fa fa-cc-mastercard mx-2" style="color:red"></i>
               <i class="fa fa-cc-discover" style="color:orange"></i>
             </div>
             <label for="cname">Name on Card</label>
             <input type="text" id="cname" name="cardname" placeholder="John More Doe">
             <label for="ccnum">Credit card number</label>
             <input type="text" id="ccnum" name="cardnumber" placeholder="1111-2222-3333-4444">
-            <label for="expmonth">Exp Month</label>
-            <input type="text" id="expmonth" name="expmonth" placeholder="September">
+
+
 
             <div class="row">
               <div class="col-50">
                 <label for="expyear">Exp Year</label>
                 <input type="text" id="expyear" name="expyear" placeholder="2018">
               </div>
+
               <div class="col-50">
                 <label for="cvv">CVV</label>
                 <input type="text" id="cvv" name="cvv" placeholder="352">
@@ -59,7 +60,9 @@
         <label>
           <input type="checkbox" checked="checked" name="sameadr"> Shipping address same as billing
         </label>
-        <input type="submit" value="Continue to checkout" class="btn">
+        <a href="/checkoutMessage">
+          <button type="button" class="btn btn-success">Continue to checkout</button>
+        </a>
       </form>
     </div>
   </div>
